kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: poll-app
  labels:
    name: poll-app
